[gd_scene load_steps=2 format=3 uid="uid://cxl436u703qh7"]

[ext_resource type="Script" uid="uid://crbyuaxsq02pg" path="res://scripts/scenes/create_mod.gd" id="1_j3d0l"]

[node name="CreateMod" type="Window"]
title = "New Mod"
initial_position = 2
size = Vector2i(500, 250)
script = ExtResource("1_j3d0l")

[node name="FolderName" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 8.0
offset_right = 295.0
offset_bottom = 39.0
placeholder_text = "Folder name"

[node name="Name" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 52.0
offset_right = 295.0
offset_bottom = 83.0
placeholder_text = "Display name"

[node name="Description" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 101.0
offset_right = 295.0
offset_bottom = 230.0
placeholder_text = "Description"

[node name="GlobalPatchWads" type="CheckBox" parent="."]
offset_left = 313.0
offset_top = 12.0
offset_right = 488.0
offset_bottom = 43.0
text = "Global Patch Wads"

[node name="MusicWad" type="Button" parent="."]
offset_left = 313.0
offset_top = 50.0
offset_right = 472.0
offset_bottom = 81.0
text = "Music Wad"

[node name="PatchWads" type="Button" parent="."]
offset_left = 313.0
offset_top = 92.0
offset_right = 472.0
offset_bottom = 123.0
text = "Patch Wads"

[node name="Save" type="Button" parent="."]
offset_left = 420.0
offset_top = 200.0
offset_right = 472.0
offset_bottom = 231.0
text = "Save"

[node name="MusicDialog" type="NativeFileDialog" parent="."]
title = "Open a Music Wad"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.wad ; Wad Files")

[node name="PatchWadsDialog" type="NativeFileDialog" parent="."]
title = "Open Patch Wad(s)"
mode_overrides_title = false
file_mode = 1
access = 2
filters = PackedStringArray("*.patchwad ; Patch Wad Files")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MusicWad" to="." method="_on_music_wad_pressed"]
[connection signal="pressed" from="PatchWads" to="." method="_on_patch_wads_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="file_selected" from="MusicDialog" to="." method="_on_music_dialog_file_selected"]
[connection signal="files_selected" from="PatchWadsDialog" to="." method="_on_patch_wads_dialog_files_selected"]
